Build a HelloWorld module in Yves that renders the Hello World! string, in reverse order, on the screen

--- a/src/Pyz/Yves/HelloWorld/Theme/default/views/index/index.twig
+++ b/src/Pyz/Yves/HelloWorld/Theme/default/views/index/index.twig
@@ -3,15 +3,14 @@
 {% extends template('page-layout-main') %}
 
 {% define data = {
-    helloWorld: _view.helloWorld
+    reversedString: _view.reversedString
 } %}
-
 
 {% block content %}
     <div class="row">
         <div class="small-12 columns">
             <h2>Hello Tobi, whats up!</h2>
-            <h3>{{ data.helloWorld }}</h3>
+            <h3>{{ data.reversedString }}</h3>
         </div>
     </div>
 {% endblock %}
